ignore recorded sessions

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Audio.Asio/TestResults/
 /Test/Test.Audio.Common/x64/Debug
 /Audio.Foundation/Audio.Foundation.1.0.0.nupkg
 /Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.1.0.0.nupkg
+/Test/RepeatMyself/sessions
