--- a/Test/RepeatMyself/RepeatMyself.vcxproj.filters
+++ b/Test/RepeatMyself/RepeatMyself.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="LooperConfig.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LooperEvents.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SteinbergUrRt2.h">
@@ -42,6 +45,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LooperConfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ILooperEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LooperEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ILooper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
