--- a/Test/RepeatMyself/RepeatMyself.vcxproj
+++ b/Test/RepeatMyself/RepeatMyself.vcxproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <ClCompile Include="Looper.cpp" />
     <ClCompile Include="LooperConfig.cpp" />
+    <ClCompile Include="LooperEvents.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -120,8 +121,11 @@
     <ClCompile Include="SteinbergUrRt2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ILooper.h" />
+    <ClInclude Include="ILooperEvents.h" />
     <ClInclude Include="Looper.h" />
     <ClInclude Include="LooperConfig.h" />
+    <ClInclude Include="LooperEvents.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SteinbergUrRt2.h" />
   </ItemGroup>
