--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
@@ -222,6 +222,9 @@
     <ClInclude Include="ITransportControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IOscillator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
