--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
@@ -135,7 +135,7 @@
     <ClInclude Include="MidiInput.h" />
     <ClInclude Include="MidiMessage.h" />
     <ClInclude Include="MixParameter.h" />
-    <ClInclude Include="ObjectFactory.h" />
+    <ClInclude Include="FoundationObjectFactory.h" />
     <ClInclude Include="Oscillator.h" />
     <ClInclude Include="OutputFloat32ChannelPair.h" />
     <ClInclude Include="OutputInt24ChannelPair.h" />
@@ -182,7 +182,7 @@
     <ClCompile Include="MidiEvents.cpp" />
     <ClCompile Include="MidiInput.cpp" />
     <ClCompile Include="MidiMessage.cpp" />
-    <ClCompile Include="ObjectFactory.cpp" />
+    <ClCompile Include="FoundationObjectFactory.cpp" />
     <ClCompile Include="Oscillator.cpp" />
     <ClCompile Include="ProcessingChain.cpp" />
     <ClCompile Include="ProcessingContext.cpp" />
