--- a/Test/RepeatMyself/RepeatMyself.vcxproj.filters
+++ b/Test/RepeatMyself/RepeatMyself.vcxproj.filters
@@ -24,12 +24,6 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Looper.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="LooperConfig.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="LooperEvents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -39,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LooperEvents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
