clean up transport / controller mix
- renamed TransportControl to Controller
- renamed TransportEvents to ControllerEvents
- renamed TransportCode to ControllerCommand

--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
@@ -128,8 +128,8 @@
     <ClInclude Include="ITake.h" />
     <ClInclude Include="ITakeSequence.h" />
     <ClInclude Include="ITransport.h" />
-    <ClInclude Include="ITransportControl.h" />
-    <ClInclude Include="ITransportEvents.h" />
+    <ClInclude Include="IController.h" />
+    <ClInclude Include="IControllerEvents.h" />
     <ClInclude Include="MeterChannel.h" />
     <ClInclude Include="MidiEvents.h" />
     <ClInclude Include="MidiInput.h" />
@@ -164,7 +164,7 @@
     <ClInclude Include="AudioTime.h" />
     <ClInclude Include="Transport.h" />
     <ClInclude Include="MidiTransportControl.h" />
-    <ClInclude Include="TransportEvents.h" />
+    <ClInclude Include="ControllerEvents.h" />
     <ClInclude Include="UnknownBase.h" />
     <ClInclude Include="ContainerReader.h" />
     <ClInclude Include="VectorWriter.h" />
@@ -204,7 +204,7 @@
     <ClCompile Include="TakeSequence.cpp" />
     <ClCompile Include="Transport.cpp" />
     <ClCompile Include="MidiTransportControl.cpp" />
-    <ClCompile Include="TransportEvents.cpp" />
+    <ClCompile Include="ControllerEvents.cpp" />
     <ClCompile Include="VectorWriter.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
