--- a/Audio.Asio/Audio.Asio.vcxproj
+++ b/Audio.Asio/Audio.Asio.vcxproj
@@ -113,8 +113,8 @@
     <ClInclude Include="AudioTrackCollection.h" />
     <ClInclude Include="DriverRegistry.h" />
     <ClInclude Include="GuidConversion.h" />
-    <ClInclude Include="Looper.h" />
-    <ClInclude Include="LooperConfig.h" />
+    <ClInclude Include="ManagedLooper.h" />
+    <ClInclude Include="ManagedLooperConfig.h" />
     <ClInclude Include="LooperEvents.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RegisteredDriver.h" />
@@ -131,8 +131,8 @@
     <ClCompile Include="AudioTrackCollection.cpp" />
     <ClCompile Include="DriverRegistry.cpp" />
     <ClCompile Include="GuidConversion.cpp" />
-    <ClCompile Include="Looper.cpp" />
-    <ClCompile Include="LooperConfig.cpp" />
+    <ClCompile Include="ManagedLooper.cpp" />
+    <ClCompile Include="ManagedLooperConfig.cpp" />
     <ClCompile Include="LooperEvents.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
