--- a/Audio.Foundation/Audio.Foundation.vcxproj.filters
+++ b/Audio.Foundation/Audio.Foundation.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="MidiInputRegistry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ManagedAudioTime.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -156,6 +159,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MidiInputRegistry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ManagedAudioTime.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
