more unit tests for OSC

--- a/Test/Test.Audio.Osc.Unmanaged/Test.Audio.Osc.Unmanaged.vcxproj.filters
+++ b/Test/Test.Audio.Osc.Unmanaged/Test.Audio.Osc.Unmanaged.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MemoryBufferTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MessageBuilderTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
