--- a/Test/Test.Audio.Osc.Unmanaged/Test.Audio.Osc.Unmanaged.vcxproj
+++ b/Test/Test.Audio.Osc.Unmanaged/Test.Audio.Osc.Unmanaged.vcxproj
@@ -164,6 +164,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MemoryBufferTests.cpp" />
+    <ClCompile Include="MessageBuilderTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
